# AnimationsProgramming

./: CMakeLists.txt  README.md  main.cpp
model/: Model.cpp  Model.h
shader/: basic.frag  basic.frag.spv  basic.vert  basic.vert.spv
tools/: Logger.cpp
vulkan/: CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  Framebuffer.cpp  Framebuffer.h  Pipeline.cpp  Pipeline.h  Renderpass.cpp  Renderpass.h  Shader.cpp  Shader.h  SyncObjects.cpp  SyncObjects.h  Texture.cpp  Texture.h  VkRenderData.h  VkRenderer.cpp  VkRenderer.h
window/: Window.cpp  Window.h
